# personal-dev-blog

./: .pre-commit-config.yaml  README.md  db.sqlite3  pyproject.toml
PersonalBlog/: asgi.py  random_secret_key.py  settings.py  urls.py  wsgi.py
main_app/: admin.py  forms.py  models.py  urls.py  views.py
main_app/migrations/: 0001_initial.py  0002_comment.py  0003_alter_comment_options_comment_user_email_and_more.py  0004_userdata.py  0005_alter_userdata_unique_together_userdata_stored_posts_and_more.py  0006_alter_userdata_options.py
main_app/static/main_app/: about.css  all-posts.css  index.css  post-detail.css  post.css  read-later.css
main_app/templates/main_app/: about.html  all-posts.html  index.html  post-detail.html  read-later.html
main_app/templates/main_app/includes/: post.html
static/: app.css
templates/: base.html
